<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tj_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <include
        android:id="@+id/event_report_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_toolbar"
        />
    <RadioGroup
        android:layout_marginTop="10dp"
        android:id="@+id/type_rg"
        android:layout_below="@+id/event_report_toolbar"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@drawable/text_color_selector"
            android:button="@null"
            android:text="@string/zwh"
            android:checked="true"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/zwh_rb"
            />
        <RadioButton
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="5dp"
            android:textColor="@drawable/text_color_selector"
            android:button="@null"
            android:text="@string/dydh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dydh_rb"
            />
        <RadioButton
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@drawable/text_color_selector"
            android:button="@null"
            android:padding="5dp"

            android:text="@string/dxzh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dxzh_rb"
            />
        <RadioButton
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@drawable/text_color_selector"
            android:button="@null"
            android:text="@string/dk"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/dk_rb"
            />
    </RadioGroup>
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/type_rg"
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view"

            />
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
