<?xml version="1.0" encoding="utf-8"?>
<android.com.skyh.until.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:background="#f6f1f1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:scrollbars="none"
    zhy:rightPadding="100dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <include layout="@layout/nav_header" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/activity_toolbar"/>

            <android.support.v4.view.ViewPager
                android:layout_below="@+id/toolbar"
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                >

            </android.support.v4.view.ViewPager>
            <RelativeLayout
                android:layout_below="@+id/viewPager"
                android:id="@+id/ts_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_alignParentTop="true"
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:background="#66000000"
                    android:layout_height="2dp"/>
                <LinearLayout
                    android:id="@+id/tsxx"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="温馨提示"
                        android:textSize="22sp"
                        android:padding="10dp"
                        android:textColor="@color/red"

                        />
                    <View
                        android:layout_width="2dp"
                        android:background="#66000000"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="1.2017年4月召开车间班组党支部大会。"
                        />
                </LinearLayout>
                <View
                    android:layout_below="@+id/tsxx"
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:background="#66000000"
                    android:layout_height="2dp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_alignBottom="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:id="@+id/bei_jing"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:id="@+id/dot"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    ></LinearLayout>
            </LinearLayout>
            <ScrollView
                android:layout_below="@+id/ts_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/zwh_btn"
                            android:layout_weight="1"
                            android:background="@drawable/layout_main_bg"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_margin="8dp"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@mipmap/zwh"
                                />
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:layout_gravity="center"
                                android:text="@string/zwh"

                                />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/dydh_btn"
                            android:layout_weight="1"
                            android:background="@drawable/layout_main_bg"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_margin="8dp"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@mipmap/dydh"
                                />
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:layout_gravity="center"
                                android:text="@string/dydh"

                                />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/dxzh_btn"
                            android:layout_weight="1"
                            android:background="@drawable/layout_main_bg"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_margin="8dp"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@mipmap/dxzh"
                                />
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/dxzh"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/dk_btn"
                            android:layout_weight="1"
                            android:background="@drawable/layout_main_bg"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_margin="8dp"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@mipmap/dk"
                                />
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/dk"
                                />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/shyktjb_btn"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/layout_main_bg"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_margin="8dp"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@mipmap/zwh"
                            android:layout_gravity="center"

                            />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/shyktjb"

                            />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>

</android.com.skyh.until.SlidingMenu>
